7a19efb fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_ro.properties
+++ b/i18n/i18n_app_ro.properties
@@ -26,7 +26,7 @@ coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
-create=Create
+create=Creare
 created_by=Created by
 current_legends=Current legends
 daily=Daily
@@ -76,15 +76,15 @@ google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=Grup
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Grupuri
 groupset=Group set
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=Acas\u0103
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -92,24 +92,24 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Ultimele 2 \u0219ase luni
 last_3_months=Ultimele 3 luni
-last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
-last_5_financial_years=Last 5 financial years
+last_4_quarters=Ultimele 4 trimestre
+last_4_weeks=Ultimele 4 s\u0103pt\u0103m\u00e2ni
+last_5_financial_years=Ultimii 5 ani financiari
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
+last_6_months=Ultimele 6 luni
+last_12_months=Ultimele 12 luni
 last_12_weeks=Last 12 weeks
-last_52_weeks=Last 52 weeks
+last_52_weeks=Ultimele 52 de s\u0103pt\u0103m\u00e2ni
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
+last_financial_year=Ultimul an financiar
 last_month=Luna trecut\u0103
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_quarter=Ultimul trimestru
+last_sixmonth=Ultimele \u0219ase luni
 last_week=S\u0103pt\u0103m\u00e2na trecut\u0103
-last_5_years=Last 5 years
-last_year=Last year
+last_5_years=Ultimii 5 ani
+last_year=Anul trecut
 latitude=Latitude
 layer=Layer
 layers=Layers
@@ -123,7 +123,7 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=Nivel
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
@@ -136,9 +136,9 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=Lunar
 name=Name
-next=Next
+next=Urm\u0103torul
 nighttime_lights=Nighttime lights
 no=Nu
 no_groupset_selected=No group set selected
@@ -169,11 +169,11 @@ overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
 period=Period
-period_type=Period type
+period_type=Tipul perioadei
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
-please_enter_a_name=Please enter a name
+please_enter_a_name=Introduce\u021bi un nume
 please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
@@ -184,7 +184,7 @@ previous=Previous
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=Trimestrial
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
@@ -269,9 +269,9 @@ weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
+yearly=Anual
 yes=Da
-yesterday=Yesterday
+yesterday=Ieri
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
