71c5ebc fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_or.properties
+++ b/i18n/i18n_app_or.properties
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u0b17\u0b43\u0b39
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -110,7 +110,7 @@ last_sixmonth=Last six-month
 last_week=\u0b17\u0b24 \u0b38\u0b2a\u0b4d\u0b24\u0b3e\u0b39
 last_5_years=Last 5 years
 last_year=Last year
-latitude=Latitude
+latitude=\u0b05\u0b15\u0b4d\u0b37\u0b3e\u0b02\u0b36
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -124,7 +124,7 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Level
-longitude=Longitude
+longitude=\u0b26\u0b4d\u0b30\u0b3e\u0b18\u0b3f\u0b2e\u0b3e
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
