--- a/i18n/i18n_app_ro.properties
+++ b/i18n/i18n_app_ro.properties
@@ -1,8 +1,8 @@
 about=About
 add_legend=Add legend
-add_new=Add new
+add_new=Ad\u0103ugare nou
 address=Address
-add_to_dashboard=Add to dashboard
+add_to_dashboard=Ad\u0103ugare pe tabloul de bord
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
@@ -12,7 +12,7 @@ average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
+cancel=Anulare
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
@@ -34,7 +34,7 @@ data=Data
 data_and_periods=Data and periods
 dataelement=Data element
 dataelement_group=Data element group
-dataset=Data set
+dataset=Set de date
 delete=Lichidare
 delete_favorite=Delete favorite
 details=Details
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=Data de sf\u00eer\u0219it
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -86,7 +86,7 @@ highlight_color=Highlight color
 high_size=High size
 home=Acas\u0103
 indicator=Indicator
-indicator_group=Indicator group
+indicator_group=Grup de indicatori
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
@@ -100,7 +100,7 @@ last_5_financial_years=Ultimii 5 ani financiari
 last_6_bimonths=Last 6 bi-months
 last_6_months=Ultimele 6 luni
 last_12_months=Ultimele 12 luni
-last_12_weeks=Last 12 weeks
+last_12_weeks=Ultimele 12 s\u0103pt\u0103m\u00e2ni
 last_52_weeks=Ultimele 52 de s\u0103pt\u0103m\u00e2ni
 last_bimonth=Last bi-month
 last_financial_year=Ultimul an financiar
@@ -161,7 +161,7 @@ options=Options
 organisation_unit=Unitate organiza\u021bional\u0103
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units=Unit\u0103\u021bi organiza\u021bionale
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
@@ -195,7 +195,7 @@ revision=Revision
 search=C\u0103utare
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=Select
+select=Selectare
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -206,13 +206,13 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=Select program
+select_program=Selectare program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Partajare
 share_with_other_people=Share with others
 sharing_settings=Sharing settings
 show=Show
@@ -222,7 +222,7 @@ show_lon_lat=Show longitude/latitude
 sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=Start date
+start_date=Data de \u00eenceput
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
