00b25fe fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -73,7 +73,7 @@ financial_july=Financial July
 financial_oct=Financial October
 google_hybrid=Google Hybrid
 google_streets=Google Streets
-go_to_charts=Go to charts
+go_to_charts=Pergi ke grafik
 go_to_pivot_tables=Ke tabel pivot
 greater_than=Lebih besar dari
 group=Grup
