9e8ac5d fix(translations): sync translations from transifex (v32)

--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -15,7 +15,7 @@ by_data_element=Volgens gegevenselement
 cancel=Annuleer
 can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
-chart=Chart
+chart=Grafiek
 classes_method=Classes / method
 clear=Clear
 clear_map=Clear map
@@ -40,8 +40,8 @@ delete_favorite=Delete favorite
 details=Details
 download=Download
 download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
-drill_up_one_level=Drill up one level
+drill_down_one_level=Ga \u00e9\u00e9n niveau omlaag
+drill_up_one_level=Ga \u00e9\u00e9n niveau omhoog
 duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
@@ -51,8 +51,8 @@ edit_legend=Edit legend
 email=Emailadres
 end_date=Einddatum
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
-equal_intervals=Equal intervals
+equal_counts=Gelijke aantallen
+equal_intervals=Gelijke intervallen
 event_data_item=Gebeurtenisgegevensitem
 event_data_items=Gebeurtenisgegevensitems
 event_layer=Event layer
@@ -139,7 +139,7 @@ min_max_value=Min/max value
 monthly=Maandelijks
 name=Naam
 next=Next
-nighttime_lights=Nighttime lights
+nighttime_lights=Nachtelijke lichten
 no=Nee
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
@@ -167,7 +167,7 @@ osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
-parent_unit=Parent unit
+parent_unit=Boveliggende eenheid
 period=Periode
 period_type=Soort periode
 phone_number=Phone number
@@ -184,13 +184,13 @@ previous=Previous
 program=Programma
 program_indicators=Programmaindicators
 public_access=Publieke toegang
-quarterly=Quarterly
+quarterly=Driemaandelijks
 relative=Relatief
 relocate=Verplaats
 relocate_facility=Relocate facility
 remove=Verwijderen
 rename=Rename
-reporting_rates=Reporting rates
+reporting_rates=Rapporteringsgraden
 revision=Revision
 search=Search
 search_for_favorites=Search for favorites
@@ -219,8 +219,8 @@ show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Toon informatie
 show_lon_lat=Toon lengtegraad/breedtegraad
-sixmonthly=Six-monthly
-sixmonthly_april=Six-monthly April
+sixmonthly=Zesmaandelijks
+sixmonthly_april=Zesmaandelijks april
 stage=Stadium
 start_date=Startdatum
 start_end_dates=Start-/einddatums
