6bc932c fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_da.properties
+++ b/i18n/i18n_app_da.properties
@@ -131,7 +131,7 @@ manage_favorites=Manage favorites
 map=Map
 max=Max
 min=Min
-min_max_c=Min/max \u00c2\u00b0C
+min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
