--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -1,144 +1,144 @@
 about=Acerca de
 add_legend=A\u00f1adir leyenda
-add_new=A\u00f1adir
+add_new=Add new
 address=Direcci\u00f3n
-add_to_dashboard=A\u00f1adir al cuadro de mandos
+add_to_dashboard=A\u00f1adir al tablero
 aggregation_type=Tipo de agregaci\u00f3n
 allow_external_access=Permitir acceso externo
-and_or_lower_than=Y/o menor que
+and_or_lower_than=And/or lower than
 attribution=Atribucio\u0301n
 automatic=Autom\u00e1tico
-average=Promedio
+average=Average
 bimonthly=Bimestral
-boundary_layer=Capa de l\u00edmites
+boundary_layer=Boundary layer
 by_data_element=Por elemento de datos
-cancel=Cancelar
-can_edit_and_view=Ver y editar
-can_view=Ver
-chart=Gr\u00e1fico
+cancel=Cancel
+can_edit_and_view=Puede editar y visualizar
+can_view=Can view
+chart=Chart
 classes_method=Clases / m\u00e9todo
 clear=Limpiar
 clear_map=Borrar mapa
 clustering=Clustering
-code=C\u00f3digo
+code=Code
 color_scale=Escala de color
 coordinate_field=Coordinate field
 coordinates=Coordenadas
 coordinates_could_not_be_loaded=No se pudo cargar las coordenadas
-count=Conteo
-create=Crear
-created_by=Creado por
-current_legends=Leyendas actuales
-daily=Diario
-data=Datos
-data_and_periods=Datos y per\u00edodos
-dataelement=Elemento de datos
-dataelement_group=Grupo de elementos de datos
-dataset=Set de datos
-delete=Eliminar
-delete_favorite=Eliminar favorito
+count=Count
+create=Create
+created_by=Created by
+current_legends=Current legends
+daily=Daily
+data=Data
+data_and_periods=Data and periods
+dataelement=Data element
+dataelement_group=Grupo de elemento de datos
+dataset=Data set
+delete=Delete
+delete_favorite=Delete favorite
 details=Detalles
 download=Descargar
-download_map_as_png=Descargar mapa como PNG
-drill_down_one_level=Desglosar un nivel
+download_map_as_png=Download map as PNG
+drill_down_one_level=Drill down one level
 drill_up_one_level=Desglosar nivel anterior
 duplicate=Duplicar
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Leyenda de Google Earth Engine
-elevation=Elevacio\u0301n
-edit_layer=Editar capa
-edit_legend=Editar leyenda
-email=Correo-e
+elevation=Elevation
+edit_layer=Edit layer
+edit_legend=Edit legend
+email=Email
 end_date=Fecha final
 end_value_should_be_bigger_than_start_value=El valor de finalizaci\u00f3n debe ser mayor que el valor de comienzo
 equal_counts=Cuentas iguales
-equal_intervals=Intervalos iguales
+equal_intervals=Equal intervals
 event_data_item=Event data item
 event_data_items=Datos de eventos
-event_layer=Capa de eventos
+event_layer=Event layer
 event_location=Event location
 event_time=Event time
 external_layer=Capa externa
 external_layer_legend=Leyenda de capa externa
-facility_layer=Capa de establecimiento
+facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Exportar la capa de establecimientos no est\u00e1 soportado actualmente
-facility_layer_legend=Leyenda de capa de establecimientos
+facility_layer_legend=Facility layer legend
 favorite_name=Nombre favorito
 favorite_outdated_create_new=El favorito est\u00e1 obsoleto - por favor, cree uno nuevo
 favorites=Favoritos
-filter=Filtro
-filter_by_value=Filtrar por valor
+filter=filtro
+filter_by_value=Filter by value
 financial_april=A\u00f1o fiscal - Abril
 financial_july=A\u00f1o fiscal - Julio
-financial_oct=A\u00f1o fiscal - Octubre
-google_hybrid=Google H\u00edbrido
+financial_oct=Financial year (Start October)
+google_hybrid=Google Hybrid
 google_streets=Google Calles
 go_to_charts=Ir a gr\u00e1ficos
-go_to_pivot_tables=Ir a tablas din\u00e1micas
-greater_than=Mayor que
-group=Grupo
+go_to_pivot_tables=Go to pivot tables
+greater_than=Greater than
+group=Group
 group_nearby_events=Group nearby events
-groups=Grupos
+groups=Groups
 groupset=Set de grupos
-has_no_orgunits=no tiene unidades organizativas
-high_color_size=Color / tama\u00f1o m\u00e1ximo
-highlight_color=Color de realce
-high_size=Tama\u00f1o grande
-home=Inicio
-indicator=Indicador
+has_no_orgunits=has no organisation units
+high_color_size=High color / size
+highlight_color=Highlight color
+high_size=High size
+home=Home
+indicator=Indicator
 indicator_group=Grupo de indicadores
 information=Informaci\u00f3n
-infrastructural_data=Datos de infraestructura
+infrastructural_data=Infrastructural data
 invalid_parameter=Par\u00e1metro no v\u00e1lido
 item_type=Item type
 landcover=Cubierta de tierra
-last_2_sixmonths=\u00daltimos 2 semestres
+last_2_sixmonths=Last 2 six-months
 last_3_months=\u00daltimos 3 meses
-last_4_quarters=Los \u00faltimos 4 trimestres
+last_4_quarters=Last 4 quarters
 last_4_weeks=\u00daltimas 4 semanas
-last_5_financial_years=\u00daltimos 5 a\u00f1os financieros
+last_5_financial_years=Last 5 financial years
 last_6_bimonths=\u00daltimos 6 bimestres
 last_6_months=\u00daltimos 6 meses
-last_12_months=\u00daltimos 12 meses
+last_12_months=Ultimos 12 meses
 last_12_weeks=\u00daltimas 12 semanas
-last_52_weeks=\u00daltimas 52 semanas
-last_bimonth=Bimestre anterior
-last_financial_year=A\u00f1o fiscal anterior
-last_month=Mes anterior
-last_quarter=El trimestre pasado
-last_sixmonth=Semestre anterior
-last_week=Semana anterior
+last_52_weeks=Last 52 weeks
+last_bimonth=Last bi-month
+last_financial_year=Last financial year
+last_month=Last month
+last_quarter=Last quarter
+last_sixmonth=Last six-month
+last_week=Last week
 last_5_years=\u00daltimos 5 a\u00f1os
-last_year=A\u00f1o anterior
+last_year=El a\u00f1o pasado
 latitude=Latitud
 layer=Capa
 layers=Capas
 layer_stack_transparency=Transparencia
 legend_name=Nombre de leyenda
 legend_name_is_required=Nombre de leyenda requerido
-legends=Leyendas
-legendset=Set de leyendas
+legends=Legends
+legendset=Legend set
 legend_sets_available=set de leyendas disponible
 legend_set_name=Nombre de Set de Leyenda
 legendsets=Sets de Leyendas
 legend_symbolizer=Simbolizador
-legend_type=Tipo de leyenda
+legend_type=Legend type
 level=Nivel
-longitude=Longitud
-low_color_size=Color / tama\u00f1o m\u00ednimo
-low_size=Tama\u00f1o peque\u00f1o
-manage_favorites=Administrar favoritos
-map=Mapa
+longitude=Longitude
+low_color_size=Low color / size
+low_size=Low size
+manage_favorites=Manage favorites
+map=Map
 max=M\u00e1x
-min=M\u00edn
-min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/max elevaci\u00f3n
+min=Min
+min_max_c=Min/max \u00b0C
+min_max_elevation=Min/max elevation
 min_max_people=Min/max personas
 min_max_rainfall=Min/max lluvia
 min_max_value=Min/M\u00e1x valor
 monthly=Mensual
-name=Nombre
-next=Siguiente
+name=Name
+next=Next
 nighttime_lights=Luces nocturnas
 no=No
 no_groupset_selected=No se ha seleccionado set de grupos
@@ -146,35 +146,35 @@ no_map_to_save=No hay mapa que guardar
 none=Ninguno
 no_event_coordinates_found=No se encontraron coordenadas para el evento
 no_organisation_unit_levels=Sin niveles para la unidad organizativa
-no_organisation_units_specified=No se especificaron unidades organizativas
-no_period_selected=No hay periodo seleccionado
+no_organisation_units_specified=No organisation units specified
+no_period_selected=No period selected
 no_program_stage_selected=Ninguna etapa del programa seleccionada
 no_selected_items=No hay \u00edtem seleccionados
 no_system_info_found=No se encontr\u00f3 informaci\u00f3n del sistema
-no_valid_coordinates_found=No se han encontrado coordenadas v\u00e1lidas
-open_last_chart=Abrir \u00faltimo gr\u00e1fico
-open_last_table=Abrir \u00faltima tabla
+no_valid_coordinates_found=No valid coordinates found
+open_last_chart=Open last chart
+open_last_table=Open last table
 openstreetmap=Mapa abierto (OSM)
-open_this_map_as_chart=Abrir este mapa como una gr\u00e1fica
+open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Abrir este mapa como una tabla
-options=Opciones
+options=Options
 organisation_unit=Unidad organizativa
 organisation_unit_group_icons=Iconos del grupo de unidad organizativa
 organisationunit_groupset=Mostrar set de grupos de unidad organizativa
 organisation_units=Unidades organizativas
 organisationunit_search=Buscar unidad organizativa
-osm_light=OSM Sencillo
+osm_light=OSM Light
 overwrite=Sobrescribir
-overwrite_favorite=Sobrescribir favorito
-page=P\u00e1gina
-parent_unit=Unidad padre
-period=Periodo
+overwrite_favorite=Overwrite favorite
+page=Page
+parent_unit=Parent unit
+period=Period
 period_type=Tipo de periodo
 phone_number=N\u00famero de tel\u00e9fono
-placement=Posici\u00f3n
-please_create_map_first=Por favor, cree un mapa primero
-please_enter_a_name=Por favor, introduzca un nombre
-please_enter_map_title=Por favor, introduzca el t\u00edtulo del mapa
+placement=Placement
+please_create_map_first=Please create a map first
+please_enter_a_name=Entrar un nombre
+please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
 population_density=Densidad de poblaci\u00f3n
@@ -182,96 +182,96 @@ precipitation=Precipitaci\u00f3n
 predefined=Predefinido
 previous=Anterior
 program=Programa
-program_indicators=Indicadores de programa
+program_indicators=Program indicators
 public_access=Acceso p\u00fablico
-quarterly=Trimestral
+quarterly=Quarterly
 relative=Relativo
-relocate=Reubicar
+relocate=Relocate
 relocate_facility=Reubicar establecimiento
-remove=Borrar
-rename=Renombrar
+remove=Remove
+rename=Rename
 reporting_rates=Tasas de Informes
-revision=Revisi\u00f3n
-search=Buscar
-search_for_favorites=Buscar favoritos
-search_for_user_groups=Buscar grupos de usuario
-select=Seleccionar
+revision=Revision
+search=Search
+search_for_favorites=Search for favorites
+search_for_user_groups=Search for user groups
+select=Select
 select_groups=Seleccionar grupos
-selection_mode=Modo de selecci\u00f3n
+selection_mode=Selection mode
 select_dataset=Seleccionar set de datos
 select_layer=Seleccionar capa
-select_layer_from_google_earth_engine=Seleccionar la capa de Google Earth Engine
+select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Seleccionar niveles
-select_organisation_unit_groups=Seleccionar grupos de unidad organizativa
-select_organisation_unit_levels=Seleccionar niveles de unidad organizativa
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Seleccionar unidades organizativas
-select_period=Seleccionar per\u00edodo
-select_program=Seleccionar programa
+select_period=Select period
+select_program=Select program
 select_service=Seleccionar servicio
-select_stage=Seleccionar fase
+select_stage=Select stage
 select_sub_units=Seleccionar sub-unidades
-select_year=Seleccionar a\u00f1o
+select_year=Select year
 service_url=Servicio URL
-share=Compartir
+share=Share
 share_with_other_people=Compartir con otros
-sharing_settings=Ajustes de compartici\u00f3n
+sharing_settings=Sharing settings
 show=Mostrar
-show_circular_area=Mostrar \u00e1rea circular de radio (m)
-show_information_sheet=Mostrar hoja de informaci\u00f3n
+show_circular_area=Show circular area with radius (m)
+show_information_sheet=Show information
 show_lon_lat=Mostrar longitud/latitud
-sixmonthly=Semestral
+sixmonthly=Six-monthly
 sixmonthly_april=Semestral Abril
-stage=Fase
+stage=Stage
 start_date=Fecha inicial
-start_end_dates=Fechas de inicio y fin
-start_end_value=Valor Inicial/Final
+start_end_dates=Start/end dates
+start_end_value=Start/end value
 stddev=Desviaci\u00f3n est\u00e1ndar
-steps=Pasos
+steps=Steps
 style=Estilo
-sub_units=Sub-unidades
+sub_units=Sub-units
 sub_x2_units=Sub-unidades-x2
 sum=Suma
-swap_lon_lat=Intercambiar longitud/latitud
-symbol_layer=Capa de establecimientos
-table=Tabla
+swap_lon_lat=Swap longitude/latitude
+symbol_layer=Facility layer
+table=Table
 temperature=Temperatura
-text_filter=Filtro de texto
-thematic_layer=Capa tem\u00e1tica
-thematic_layer_1_legend=Leyenda de capa tem\u00e1tica 1
+text_filter=Text filter
+thematic_layer=Thematic layer
+thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Leyenda de capa tem\u00e1tica 2
-thematic_layer_3_legend=Leyenda de capa tem\u00e1tica 3
-thematic_layer_4_legend=Leyenda de capa tem\u00e1tica 4
+thematic_layer_3_legend=Thematic layer 3 legend
+thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=Este bimestre
 this_financial_year=Este a\u00f1o fiscal
 this_month=Este mes
 this_quarter=Este trimestre
-this_sixmonth=Este semestre
+this_sixmonth=This six-month
 this_week=Esta semana
-this_year=Este a\u00f1o
+this_year=This year
 time_since_last_data_update=Tiempo desde \u00faltima actualizaci\u00f3n
 today=Hoy
 totals=Totales
 update=Actualizar
-username=Nombre de usuario
-user_is_not_assigned_to_any_organisation_units=El usuario no est\u00e1 asignado a ninguna de las unidades organizativas
+username=Username
+user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=Usuario de unidad organizativa
-user_ou=Usuario OU
-user_sub_units=Subunidades de usuario
-user_sub_x2_units=Sub-unidades-x2 de usuario
+user_ou=User OU
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
 value=Valor
-value_type=Tipo de valor
+value_type=Value type
 variance=Varianza
-version=Versi\u00f3n
+version=Version
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Escribir interpretaci\u00f3n
+write_interpretation=Write interpretation
 write_your_interpretation=Escriba su intepretaci\u00f3n
 yearly=Anual
 yes=S\u00ed
-yesterday=Ayer
-you_can_not_select_organisation_units_below_the_selected_level=No puedes seleccionar unidades organizativas por debajo del nivel seleccionado
+yesterday=Yesterday
+you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=No tienes acceso a todos los elementos en este favorito
 
