--- a/i18n/i18n_app_or.properties
+++ b/i18n/i18n_app_or.properties
@@ -37,7 +37,7 @@ dataelement_group=Data element group
 dataset=Data set
 delete=Delete
 delete_favorite=Delete favorite
-details=Details
+details=\u0b2c\u0b3f\u0b2c\u0b30\u0b23\u0b40
 download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
@@ -110,7 +110,7 @@ last_sixmonth=Last six-month
 last_week=Last week
 last_5_years=Last 5 years
 last_year=Last year
-latitude=Latitude
+latitude=\u0b05\u0b15\u0b4d\u0b37\u0b3e\u0b02\u0b36
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -136,11 +136,11 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=\u0b2e\u0b3e\u0b38\u0b3f\u0b15
 name=Name
 next=Next
 nighttime_lights=Nighttime lights
-no=\u09a8\u09be
+no=\u0b28\u0b3e\u0b39\u0b3f\u0b01
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
 none=None
@@ -180,8 +180,8 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=\u09aa\u09c2\u09b0\u09cd\u09ac\u09ac\u09b0\u09cd\u09a4\u09c0
-program=\u09aa\u09cd\u09b0\u09cb\u0997\u09cd\u09b0\u09be\u09ae
+previous=Previous
+program=Program
 program_indicators=Program indicators
 public_access=Public access
 quarterly=Quarterly
@@ -243,13 +243,13 @@ thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
 this_financial_year=This financial year
-this_month=This month
+this_month=\u0b1a\u0b33\u0b3f\u0b24 \u0b2e\u0b3e\u0b38
 this_quarter=This quarter
 this_sixmonth=This six-month
-this_week=This week
+this_week=\u0b1a\u0b33\u0b3f\u0b24 \u0b38\u0b2a\u0b4d\u0b24\u0b3e\u0b39
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u0b06\u0b1c\u0b3f
 totals=Totals
 update=Update
 username=Username
@@ -262,15 +262,15 @@ value=Value
 value_type=Value type
 variance=Variance
 version=Version
-weekly=Weekly
+weekly=\u0b38\u0b3e\u0b2a\u0b4d\u0b24\u0b3e\u0b39\u0b3f\u0b15
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
-yes=\u09b9\u09cd\u09af\u09be\u0981
+yearly=\u0b2c\u0b3e\u0b30\u0b4d\u0b37\u0b3f\u0b15
+yes=\u0b39\u0b01
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
