--- a/i18n/i18n_app_ro.properties
+++ b/i18n/i18n_app_ro.properties
@@ -2,7 +2,7 @@ about=About
 add_legend=Add legend
 add_new=Add new
 address=Address
-add_to_dashboard=Add to dashboard
+add_to_dashboard=Ad\u0103ugare pe tabloul de bord
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=Data de sf\u00eer\u0219it
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -86,21 +86,21 @@ highlight_color=Highlight color
 high_size=High size
 home=Home
 indicator=Indicator
-indicator_group=Indicator group
+indicator_group=Grup de indicatori
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=Ultimele 3 luni
 last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
+last_4_weeks=Ultimele 4 s\u0103pt\u0103m\u00e2ni
 last_5_financial_years=Last 5 financial years
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
+last_6_months=Ultimele 6 luni
+last_12_months=Ultimele 12 luni
+last_12_weeks=Ultimele 12 s\u0103pt\u0103m\u00e2ni
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
@@ -108,8 +108,8 @@ last_month=Last month
 last_quarter=Last quarter
 last_sixmonth=Last six-month
 last_week=Last week
-last_5_years=Last 5 years
-last_year=Last year
+last_5_years=Ultimii 5 ani
+last_year=Anul trecut
 latitude=Latitude
 layer=Layer
 layers=Layers
@@ -123,7 +123,7 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=Nivel
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
@@ -136,11 +136,11 @@ min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=Lunar
 name=Name
 next=Next
 nighttime_lights=Nighttime lights
-no=\u09a8\u09be
+no=Nu
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
 none=None
@@ -158,10 +158,10 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=Unitate organiza\u021bional\u0103
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units=Unit\u0103\u021bi organiza\u021bionale
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
@@ -169,19 +169,19 @@ overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
 period=Period
-period_type=Period type
+period_type=Tipul perioadei
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
-please_enter_a_name=Please enter a name
+please_enter_a_name=Introduce\u021bi un nume
 please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=\u09aa\u09c2\u09b0\u09cd\u09ac\u09ac\u09b0\u09cd\u09a4\u09c0
-program=\u09aa\u09cd\u09b0\u09cb\u0997\u09cd\u09b0\u09be\u09ae
+previous=Previous
+program=Program
 program_indicators=Program indicators
 public_access=Public access
 quarterly=Quarterly
@@ -222,7 +222,7 @@ show_lon_lat=Show longitude/latitude
 sixmonthly=Six-monthly
 sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=Start date
+start_date=Data de \u00eenceput
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
@@ -243,15 +243,15 @@ thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
 this_financial_year=This financial year
-this_month=This month
+this_month=Luna aceasta
 this_quarter=This quarter
 this_sixmonth=This six-month
-this_week=This week
+this_week=S\u0103pt\u0103m\u00e2na aceasta
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=Ast\u0103zi
 totals=Totals
-update=Update
+update=Actualizare
 username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
@@ -269,8 +269,8 @@ weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
-yes=\u09b9\u09cd\u09af\u09be\u0981
+yearly=Anual
+yes=Da
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
