--- a/i18n/i18n_app_ckb.properties
+++ b/i18n/i18n_app_ckb.properties
@@ -12,12 +12,12 @@ average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=\u0644\u0627\u0628\u0631\u062f\u0646
+cancel=Cancel
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
-clear=\u0628\u0627\u0643
+clear=\u067e\u0627\u06a9\u06a9\u0631\u062f\u0646\u06d5\u0648\u06d5
 clear_map=Clear map
 clustering=Clustering
 code=Code
@@ -32,10 +32,10 @@ current_legends=Current legends
 daily=Daily
 data=Data
 data_and_periods=Data and periods
-dataelement=\u062f\u0627\u062a\u0627\u064a \u0633\u0629\u0631\u0629\u0643\u064a
+dataelement=Data element
 dataelement_group=Data element group
 dataset=Data set
-delete=\u0633\u0631\u064a\u0646\u0629\u0648\u0629
+delete=Delete
 delete_favorite=Delete favorite
 details=Details
 download=Download
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=\u0645\u0627\u06b5\u0629\u0648\u0629
+home=Home
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -93,7 +93,7 @@ invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
 last_2_sixmonths=Last 2 six-months
-last_3_months=\u0633\u06ce \u0645\u0627\u0646\u06af \u067e\u06ce\u0634\u0648\u0648\u062a\u0631
+last_3_months=\u0663 \u0645\u0627\u0646\u06af \u067e\u06ce\u0634\u0648\u0648\u062a\u0631
 last_4_quarters=Last 4 quarters
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
@@ -104,10 +104,10 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=\u0645\u0627\u0646\u06af\u06cc \u0695\u0627\u0628\u0631\u062f\u0648\u0648
+last_month=Last month
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=\u0647\u06d5\u0641\u062a\u06d5\u06cc \u067e\u06ce\u0634\u0648\u0648\u062a\u0631
+last_week=Last week
 last_5_years=Last 5 years
 last_year=Last year
 latitude=Latitude
@@ -130,15 +130,15 @@ low_size=Low size
 manage_favorites=Manage favorites
 map=Map
 max=\u0632\u06cc\u0627\u062a\u0631\u06cc\u0646
-min=\u06a9\u06d5\u0645\u062a\u0631\u06cc\u0646
-min_max_c=Min/max \u00c2\u00b0C
+min=Min
+min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Monthly
 name=Name
-next=\u062f\u0627\u0647\u0627\u062a\u0648\u0648
+next=Next
 nighttime_lights=Nighttime lights
 no=\u0646\u06d5\u062e\u06ce\u0631
 no_groupset_selected=No group set selected
@@ -161,14 +161,14 @@ options=Options
 organisation_unit=\u064a\u0629\u0643\u0629\u064a \u0631\u064a\u0643\u062e\u0631\u0627\u0648
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units= \u064a\u0629\u0643\u0629\u064a \u0631\u064a\u0643\u062e\u0631\u0627\u0648
+organisation_units=\u064a\u0629\u0643\u0629\u064a \u0631\u064a\u0643\u062e\u0631\u0627\u0648
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
-page=\u0644\u0627\u0628\u0629\u0631\u0629
+page=Page
 parent_unit=Parent unit
-period=\u0645\u0627\u0648\u0629
+period=Period
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -181,21 +181,21 @@ population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
 previous=\u0630\u064a\u064e\u0634\u0648\u0648
-program=\u0628\u0629\u0631\u0646\u0627\u0645\u0629
+program=\u067e\u0631\u06c6\u06af\u0631\u0627\u0645
 program_indicators=Program indicators
 public_access=Public access
 quarterly=Quarterly
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u0644\u0627\u0628\u0631\u062f\u0646
+remove=Remove
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=\u0637\u0629\u0631\u0627\u0646
+search=Search
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=\u0647\u06d5\u06b5\u0628\u0698\u0627\u0631\u062f\u0646
+select=Select
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -206,7 +206,7 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=\u0628\u0629\u0631\u0646\u0627\u0645\u0629 \u0647\u0629\u0644\u0628\u0632\u064a\u0631\u0629
+select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
@@ -251,7 +251,7 @@ this_year=This year
 time_since_last_data_update=Elapsed time since last data update
 today=\u0626\u06d5\u0645\u0695\u06c6
 totals=Totals
-update=\u0646\u0648\u064a\u064e \u0643\u0631\u062f\u0646\u0629\u0648\u0629
+update=\u0646\u0648\u06ce \u06a9\u0631\u062f\u0646\u06d5\u0648\u06d5
 username=Username
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
@@ -270,7 +270,7 @@ weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Yearly
-yes=\u06d5\u06b5\u06ce
+yes=\u0628\u06d5\u06b5\u06ce
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
