--- a/i18n/i18n_app_km.properties
+++ b/i18n/i18n_app_km.properties
@@ -1,6 +1,6 @@
 about=\u17a2\u17c6\u1796\u17b8
 add_legend=Add legend
-add_new=\u1794\u1793\u17d2\u1790\u17c2\u1798\u200b\u1790\u17d2\u1798\u17b8\u200b
+add_new=Add new
 address=\u17a2\u17b6\u179f\u1799\u178a\u17d2\u178b\u17b6\u1793
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregation type
@@ -8,11 +8,11 @@ allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=\u1795\u179b\u1798\u1792\u17d2\u1799\u1798
+average=Average
 bimonthly=\u179a\u17b6\u179b\u17cb\u1796\u17b8\u179a\u179f\u1794\u17d2\u178f\u17b6\u17a0\u17cd
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=\u1794\u17c4\u17c7\u1794\u1784\u17cb
+cancel=Cancel
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
@@ -25,17 +25,17 @@ color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=\u1795\u179b\u179a\u17b6\u1794\u17cb
-create=\u200b\u1794\u1784\u17d2\u1780\u17be\u178f
+count=Count
+create=Create
 created_by=Created by
 current_legends=Current legends
-daily=\u179a\u17b6\u179b\u17cb\u200b\u1790\u17d2\u1784\u17c3
+daily=Daily
 data=Data
 data_and_periods=Data and periods
-dataelement=\u1791\u17b7\u1793\u17d2\u1793\u1793\u17d0\u1799\u1792\u17b6\u178f\u17bb\u178a\u17be\u1798
+dataelement=Data element
 dataelement_group=Data element group
 dataset=Data set
-delete=\u200b\u179b\u17bb\u1794\u200b
+delete=Delete
 delete_favorite=Delete favorite
 details=\u179b\u1798\u17d2\u17a2\u17b7\u178f
 download=Download
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=\u1795\u17d2\u1791\u17b6\u17c6\u1784\u178a\u17be\u1798
+home=Home
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -124,21 +124,21 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Level
-longitude=\u179a\u1799\u17c8\u1794\u178e\u17d2\u178f\u17c4\u1799
+longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
 map=Map
 max=\u17a2\u178f\u17b7\u1794\u179a\u1798\u17b6
-min=\u17a2\u1794\u17d2\u1794\u1794\u179a\u1798\u17b6
-min_max_c=Min/max \u00c2\u00b0C
+min=Min
+min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=\u179a\u17b6\u179b\u17cb\u200b\u1781\u17c2
-name=\u1788\u17d2\u1798\u17c4\u17c7
-next=\u1794\u1793\u17d2\u1791\u17b6\u1794\u17cb
+name=Name
+next=Next
 nighttime_lights=Nighttime lights
 no=\u1791\u17c1
 no_groupset_selected=No group set selected
@@ -168,7 +168,7 @@ overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+period=Period
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -184,18 +184,18 @@ previous=\u1798\u17bb\u1793
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=\u179a\u17b6\u179b\u17cb\u178f\u17d2\u179a\u17b8\u1798\u17b6\u179f
+quarterly=Quarterly
 relative=\u1791\u17c6\u1793\u17b6\u1780\u17cb\u1791\u17c6\u1793\u1784
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u1799\u1780\u1785\u17c1\u1789
-rename=\u1794\u17d2\u178a\u17bc\u179a\u200b\u1788\u17d2\u1798\u17c4\u17c7
+remove=Remove
+rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=\u179f\u17d2\u179c\u17c2\u1784\u179a\u1780
+search=Search
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=\u1787\u17d2\u179a\u17be\u179f\u200b\u179a\u17be\u179f
+select=Select
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,21 +205,21 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=\u1787\u17d2\u179a\u17be\u179f\u179a\u17be\u179f\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+select_period=Select period
 select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=\u1785\u17c2\u1780\u179a\u17c6\u179b\u17c2\u1780
+share=Share
 share_with_other_people=Share with others
 sharing_settings=Sharing settings
 show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=\u179a\u17b6\u179b\u17cb\u1786\u1798\u17b6\u179f
+sixmonthly=Six-monthly
 sixmonthly_april=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u1798\u17b6\u179f\u200b\u1796\u17b8\u1781\u17c2\u1798\u17c1\u179f\u17b6
 stage=Stage
 start_date=\u1780\u17b6\u179b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1785\u17b6\u1794\u17cb\u1795\u17d2\u178a\u17be\u1798\u200b
@@ -259,9 +259,9 @@ user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=\u178f\u1798\u17d2\u179b\u17c3
-value_type=Value Type
+value_type=Value type
 variance=Variance
-version=\u1780\u17c6\u178e\u17c2
+version=Version
 weekly=\u179a\u17b6\u179b\u17cb\u200b\u179f\u1794\u17d2\u178a\u17b6\u17a0\u17cd
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
