--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -1,144 +1,144 @@
 about=Om
 add_legend=Legg til tegnforklaring
-add_new=Legg til ny
+add_new=Add new
 address=Adresse
 add_to_dashboard=Legg til p\u00e5 dashbord
 aggregation_type=Aggregasjonstype
 allow_external_access=Tillat ekstern tilgang
-and_or_lower_than=Og/eller lavere enn
+and_or_lower_than=And/or lower than
 attribution=Attributt
 automatic=Automatisk
-average=Gjennomsnitt
-bimonthly=To-m\u00e5nedlig
-boundary_layer=Grenselag
+average=Average
+bimonthly=Tom\u00e5nedlig
+boundary_layer=Boundary layer
 by_data_element=Per datalement
-cancel=Avbryt
+cancel=Cancel
 can_edit_and_view=Kan redigere og se
-can_view=Kan se
-chart=Diagram
+can_view=Can view
+chart=Chart
 classes_method=Klasser / metode
 clear=Fjern
 clear_map=T\u00f8m kart
 clustering=Gruppering
-code=Kode
+code=Code
 color_scale=Fargeskala
 coordinate_field=Koordinatfelt
 coordinates=Koordinater
 coordinates_could_not_be_loaded=Koordinater kunne ikke lastes
-count=Antall
-create=Opprett
-created_by=Opprettet av
-current_legends=Gjeldende tegnforklaringer
-daily=Daglig
+count=Count
+create=Create
+created_by=Created by
+current_legends=Current legends
+daily=Daily
 data=Data
-data_and_periods=Data og perioder
-dataelement=Dataelement
+data_and_periods=Data and periods
+dataelement=Data element
 dataelement_group=Dataelementgruppe
-dataset=Datasett
-delete=Slett
-delete_favorite=Slett favoritt
+dataset=Data set
+delete=Delete
+delete_favorite=Delete favorite
 details=Detaljer
 download=Last ned
-download_map_as_png=Last ned kart som PNG
-drill_down_one_level=Drill ned ett niv\u00e5
+download_map_as_png=Download map as PNG
+drill_down_one_level=Drill down one level
 drill_up_one_level=Drill opp ett niv\u00e5
 duplicate=Duplisere
 earthengine_layer=Google Earth motor
 earth_engine_layer_legend=Google Earth motor tegnforklaring
-elevation=H\u00f8yde
-edit_layer=Rediger lag
-edit_legend=Rediger tegnforklaring
-email=E-post
+elevation=Elevation
+edit_layer=Edit layer
+edit_legend=Edit legend
+email=Email
 end_date=Sluttdato
 end_value_should_be_bigger_than_start_value=Sluttverdi skal v\u00e6re st\u00f8rre enn startverdi
 equal_counts=Likt antall
-equal_intervals=Like intervaller
-event_data_item=Hendelsesdatapunkt
+equal_intervals=Equal intervals
+event_data_item=Event data item
 event_data_items=Hendelsesdatapunkter
-event_layer=Hendelseslag
-event_location=Hendelsessted
+event_layer=Event layer
+event_location=Event location
 event_time=Hendelsestid
 external_layer=Eksternt lag
 external_layer_legend=Eksternt lag tegnforklaring
-facility_layer=Bygningslag
+facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Fasilitetlag eksport er for \u00f8yeblikket ikke st\u00f8ttet
-facility_layer_legend=Fasilitetlag tegnforklaring
+facility_layer_legend=Facility layer legend
 favorite_name=Favorittnavn
 favorite_outdated_create_new=Favoritten er utdatert - vennligst opprett en ny
 favorites=Favoritter
 filter=Filter
-filter_by_value=Filtrer etter verdi
+filter_by_value=Filter by value
 financial_april=Regnskaps\u00e5r (start april)
 financial_july=Regnskaps\u00e5r (start juli)
-financial_oct=Regnskaps\u00e5r (start oktober)
+financial_oct=Financial year (Start October)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=G\u00e5 til diagrammer
-go_to_pivot_tables=G\u00e5 til pivottabeller
-greater_than=St\u00f8rre enn
-group=Gruppe
+go_to_pivot_tables=Go to pivot tables
+greater_than=Greater than
+group=Group
 group_nearby_events=Grupper n\u00e6rliggende hendelser
-groups=Grupper
+groups=Groups
 groupset=Gruppesett
-has_no_orgunits=har ingen organisasjonsenheter
-high_color_size=H\u00f8yfarge / st\u00f8rrelse
-highlight_color=Uthev farge
-high_size=H\u00f8y st\u00f8rrelse
-home=Hjem
-indicator=Indikator
+has_no_orgunits=has no organisation units
+high_color_size=High color / size
+highlight_color=Highlight color
+high_size=High size
+home=Home
+indicator=Indicator
 indicator_group=Indikatorgruppe
 information=Informasjon
-infrastructural_data=Infrastrukturell data
+infrastructural_data=Infrastructural data
 invalid_parameter=Ugyldig parameter
 item_type=Elementtype
 landcover=Arealdekke
-last_2_sixmonths=Siste to halv\u00e5r
+last_2_sixmonths=Last 2 six-months
 last_3_months=Siste 3 m\u00e5neder
-last_4_quarters=Siste 4 kvartaler
+last_4_quarters=Last 4 quarters
 last_4_weeks=Siste 4 uker
-last_5_financial_years=Siste 5 regnskaps\u00e5r
-last_6_bimonths=Siste 6 to-m\u00e5neder
+last_5_financial_years=Last 5 financial years
+last_6_bimonths=Siste 6 tom\u00e5neder
 last_6_months=Siste 6 m\u00e5neder
 last_12_months=Siste 12 m\u00e5neder
 last_12_weeks=Siste 12 uker
-last_52_weeks=Siste 52 uker
-last_bimonth=Siste to-m\u00e5ned
-last_financial_year=Siste regnskaps\u00e5r
-last_month=Forrige m\u00e5ned
-last_quarter=Siste kvartal
-last_sixmonth=Siste halv\u00e5r
-last_week=Forrige uke
+last_52_weeks=Last 52 weeks
+last_bimonth=Last bi-month
+last_financial_year=Last financial year
+last_month=Last month
+last_quarter=Last quarter
+last_sixmonth=Last six-month
+last_week=Last week
 last_5_years=Siste 5 \u00e5r
-last_year=I fjor
+last_year=Forrige \u00e5r
 latitude=Breddegrad
 layer=Lag
 layers=Lag
 layer_stack_transparency=Lag stabel / gjennomsiktighet
 legend_name=Tegnforklaringsnavn
 legend_name_is_required=Tegnforklaringsnavn er p\u00e5krevd
-legends=Tegnforklaringer
+legends=Legends
 legendset=Tegnforklaringssett
 legend_sets_available=Tegnforklaringssett er tilgjengelig
 legend_set_name=Tegnforklaringsettnavn
 legendsets=Tegnforklaringsett
 legend_symbolizer=Symbolist
-legend_type=Tegnforklaringtype
+legend_type=Legend type
 level=Niv\u00e5
-longitude=Lengdegrad
-low_color_size=Lavfarge / st\u00f8rrelse
-low_size=Lav st\u00f8rrelse
-manage_favorites=Administrer favoritter
-map=Kart
+longitude=Longitude
+low_color_size=Low color / size
+low_size=Low size
+manage_favorites=Manage favorites
+map=Map
 max=Max
 min=Min
-min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/Max h\u00f8yde
+min_max_c=Min/max \u00b0C
+min_max_elevation=Min/max elevation
 min_max_people=Min/Max personer
 min_max_rainfall=Min/max nedb\u00f8r
 min_max_value=Min/max verdi
 monthly=M\u00e5nedlig
-name=Navn
-next=Neste
+name=Name
+next=Next
 nighttime_lights=Kveldslys
 no=Nei
 no_groupset_selected=Ingen gruppesett er valgt
@@ -146,132 +146,132 @@ no_map_to_save=Ingen kart \u00e5 lagre
 none=Ingen
 no_event_coordinates_found=Ingen hendelseskoordinater funnet
 no_organisation_unit_levels=Ingen organisasjonsenhetniv\u00e5er
-no_organisation_units_specified=Ingen organisasjonsenheter er spesifisert
-no_period_selected=Ingen periode valgt
+no_organisation_units_specified=No organisation units specified
+no_period_selected=No period selected
 no_program_stage_selected=Ingen programfase valgt
 no_selected_items=Ingen valgte elementer
 no_system_info_found=Ingen systeminformasjon funnet
-no_valid_coordinates_found=Ingen gyldige koordinater funnet
-open_last_chart=\u00c5pne siste diagram
-open_last_table=\u00c5pne forrige tabell
+no_valid_coordinates_found=No valid coordinates found
+open_last_chart=Open last chart
+open_last_table=Open last table
 openstreetmap=\u00c5pneGateKart
-open_this_map_as_chart=\u00c5pne dette kartet som diagram
+open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=\u00c5pne dette kartet som tabell
-options=Alternativer
+options=Options
 organisation_unit=Organisasjonsenhet
 organisation_unit_group_icons=Organisasjonsenhet gruppeikoner
 organisationunit_groupset=Organisasjonsenhetgruppesett
 organisation_units=Organisasjonsenheter
-organisationunit_search=Organisasjonsenhet s\u00f8k
-osm_light=OSM tynn
+organisationunit_search=Organisasjonsenhetss\u00f8k
+osm_light=OSM Light
 overwrite=Overskriv 
-overwrite_favorite=Overskriv favoritten
-page=Side
-parent_unit=Overordnet enhet
-period=Periode
+overwrite_favorite=Overwrite favorite
+page=Page
+parent_unit=Parent unit
+period=Period
 period_type=Periodetype
 phone_number=Telefonnummer
-placement=Plassering
-please_create_map_first=Vennligst opprett et kart f\u00f8rst
+placement=Placement
+please_create_map_first=Please create a map first
 please_enter_a_name=Vennligst legg inn et navn
-please_enter_map_title=Vennligst legg til en karttittel
+please_enter_map_title=Please enter a map title
 point_color=Punktfarge
-point_radius=Punktradius
+point_radius=Point radius
 population_density=Befolkningstetthet
-precipitation=Tolkning
+precipitation=Nedb\u00f8r
 predefined=Forh\u00e5ndsdefinert 
 previous=Forrige
 program=Program
-program_indicators=Programindikatorer
+program_indicators=Program indicators
 public_access=Offentlig tilgang
-quarterly=Kvartalsvis
+quarterly=Quarterly
 relative=Relativ
-relocate=Omplasser
+relocate=Relocate
 relocate_facility=Omplasser anlegg
-remove=Fjern
-rename=Gi nytt navn
-reporting_rates=Rapporteringsrater
-revision=Revisjon
-search=S\u00f8k
-search_for_favorites=S\u00f8k etter favoritter
-search_for_user_groups=S\u00f8k etter brukergrupper
-select=Velg
+remove=Remove
+rename=Rename
+reporting_rates=Rapporteringsfrekvens
+revision=Revision
+search=Search
+search_for_favorites=Search for favorites
+search_for_user_groups=Search for user groups
+select=Select
 select_groups=Velg grupper
-selection_mode=Valgmodus
+selection_mode=Selection mode
 select_dataset=Velg datasett
 select_layer=Velg lag
-select_layer_from_google_earth_engine=Velg lag fra Google Earth motor
+select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Velg niv\u00e5er
-select_organisation_unit_groups=Velg organisasjonsenhetsgrupper
-select_organisation_unit_levels=Velg organisasjonsenhetsniv\u00e5er
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Velg organisasjonsenheter
-select_period=Velg periode
-select_program=Valgt program
+select_period=Select period
+select_program=Select program
 select_service=Velg tjeneste
-select_stage=Velg fase
+select_stage=Select stage
 select_sub_units=Velg underenheter
-select_year=Velg \u00e5r
+select_year=Select year
 service_url=Tjeneste URL
-share=Del
+share=Share
 share_with_other_people=Del med andre
-sharing_settings=Deleinnstillinger
+sharing_settings=Sharing settings
 show=Vis
 show_circular_area=Vis sirkul\u00e6rt omr\u00e5de med radius (m)
-show_information_sheet=Vis informasjon
+show_information_sheet=Show information
 show_lon_lat=Vis lengdegrad/breddegrad
-sixmonthly=Halv\u00e5rlig
+sixmonthly=Six-monthly
 sixmonthly_april=Halv\u00e5rig April
-stage=Fase
+stage=Stage
 start_date=Startdato
-start_end_dates=Start/slutt-datoer
-start_end_value=Start/slutt verdi
+start_end_dates=Start/end dates
+start_end_value=Start/end value
 stddev=Standardavvik
-steps=Trinn
+steps=Steps
 style=Stil
-sub_units=Under-enheter
+sub_units=Sub-units
 sub_x2_units=Under-x2-enheter
 sum=Sum
-swap_lon_lat=Bytt lengdegrad/breddegrad
-symbol_layer=Bygningslag
-table=Tabell
+swap_lon_lat=Swap longitude/latitude
+symbol_layer=Facility layer
+table=Table
 temperature=Temperatur
-text_filter=Tekstfilter
-thematic_layer=Tematisk lag
-thematic_layer_1_legend=Termatisk lag 1 tegnforklaring
+text_filter=Text filter
+thematic_layer=Thematic layer
+thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Termatisk lag 2 tegnforklaring
-thematic_layer_3_legend=Termatisk lag 3 tegnforklaring
-thematic_layer_4_legend=Termatisk lag 4 tegnforklaring
-this_bimonth=Denne to-m\u00e5neden
+thematic_layer_3_legend=Thematic layer 3 legend
+thematic_layer_4_legend=Thematic layer 4 legend
+this_bimonth=Denne tom\u00e5neden
 this_financial_year=Dette regnskaps\u00e5ret
 this_month=Denne m\u00e5neden
 this_quarter=Dette kvartalet
-this_sixmonth=Dette halv\u00e5ret
+this_sixmonth=This six-month
 this_week=Denne uken
-this_year=Dette \u00e5ret
+this_year=This year
 time_since_last_data_update=Tid g\u00e5tt siden forrige dataoppdatering
 today=I dag
 totals=Totalsummer
 update=Oppdater
 username=Brukernavn
-user_is_not_assigned_to_any_organisation_units=Bruker er ikke tildelt noen organisasjonsenheter
+user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=Brukerorganisasjonsenhet
-user_ou=Bruker OU
-user_sub_units=Brukerunderenheter
-user_sub_x2_units=Brukerunder-x2-enheter
+user_ou=User OU
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
 value=Verdi
-value_type=Verditype
+value_type=Value type
 variance=Varians
-version=Versjon
+version=Version
 weekly=Ukentlig
-weekly_wednesday=Ukentlig (start onsdag)
+weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Ukentlig (start torsdag)
 weekly_saturday=Ukentlig (start l\u00f8rdag)
-weekly_sunday=Ukentlig (start s\u00f8ndag)
-write_interpretation=Skriv tolkning
+weekly_sunday=Weekly (Start Sunday)
+write_interpretation=Write interpretation
 write_your_interpretation=Skriv din tolkning
 yearly=\u00c5rlig
 yes=Ja
-yesterday=I g\u00e5r
-you_can_not_select_organisation_units_below_the_selected_level=Du kan ikke velge organisasjonsenheter under det valgte niv\u00e5et
+yesterday=Yesterday
+you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=Du har ikke tilgang til alle elementene i denne favoritten
 
