--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -1,19 +1,19 @@
 about=About
 add_legend=Add legend
 add_new=Add new
-address=Address
+address=Adres
 add_to_dashboard=Add to dashboard
-aggregation_type=Aggregation type
+aggregation_type=Aggregatietype
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automatic
+automatic=Automatisch
 average=Average
-bimonthly=Bi-monthly
+bimonthly=Tweemaandelijks
 boundary_layer=Boundary layer
-by_data_element=By data element
+by_data_element=Volgens gegevenselement
 cancel=Cancel
-can_edit_and_view=Can edit and view
+can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
@@ -22,7 +22,7 @@ clear_map=Clear map
 clustering=Clustering
 code=Code
 color_scale=Color scale
-coordinate_field=Coordinate field
+coordinate_field=Co\u00f6rdinatenveld
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
@@ -32,16 +32,16 @@ current_legends=Current legends
 daily=Daily
 data=Data
 data_and_periods=Data and periods
-dataelement=informatie onderdeel
-dataelement_group=Data element group
+dataelement=Data element
+dataelement_group=Gegevenselementengroep
 dataset=Data set
-delete=Verwijderen
+delete=Delete
 delete_favorite=Delete favorite
 details=Details
-download=Download
+download=Downloaden
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
-drill_up_one_level=Drill up one level
+drill_up_one_level=Ga \u00e9\u00e9n niveau omhoog
 duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
@@ -49,16 +49,16 @@ elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
 email=Email
-end_date=End date
+end_date=Einddatum
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
+equal_counts=Gelijke aantallen
 equal_intervals=Equal intervals
 event_data_item=Event data item
-event_data_items=Event data items
+event_data_items=Gebeurtenisgegevensitems
 event_layer=Event layer
 event_location=Event location
-event_time=Event time
-external_layer=External layer
+event_time=Tijd van gebeurtenis
+external_layer=Externe laag
 external_layer_legend=External layer legend
 facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
@@ -68,8 +68,8 @@ favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=Favorites
 filter=Filter
 filter_by_value=Filter by value
-financial_april=Financial year (Start April)
-financial_july=Financial year (Start July)
+financial_april=Financieel jaar (Start april)
+financial_july=Financieel jaar (Start juli)
 financial_oct=Financial year (Start October)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
@@ -79,28 +79,28 @@ greater_than=Greater than
 group=Group
 group_nearby_events=Group nearby events
 groups=Groups
-groupset=Group set
+groupset=Groepsreeks
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
 home=Home
 indicator=Indicator
-indicator_group=Indicator group
+indicator_group=Indicatorgroep
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
-item_type=Item type
-landcover=Landcover
+item_type=Itemsoort
+landcover=Landbedekking
 last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
+last_3_months=Laatste 3 maanden
 last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
+last_4_weeks=Laatste 4 weken
 last_5_financial_years=Last 5 financial years
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
+last_6_months=Laatste 6 maanden
+last_12_months=Laatste 12 maanden
+last_12_weeks=Laatste 12 weken
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
@@ -108,22 +108,22 @@ last_month=Last month
 last_quarter=Last quarter
 last_sixmonth=Last six-month
 last_week=Last week
-last_5_years=Last 5 years
-last_year=Last year
-latitude=Latitude
+last_5_years=Laatste 5 jaren
+last_year=Laatste jaar
+latitude=Breedtegraad
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
 legends=Legends
-legendset=Legend set
+legendset=Legendareeks
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
+level=Niveau
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
@@ -131,19 +131,19 @@ manage_favorites=Manage favorites
 map=Map
 max=Max
 min=Min
-min_max_c=Min/max \u00c2\u00b0C
+min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
+monthly=Maandelijks
 name=Name
 next=Next
-nighttime_lights=Nighttime lights
-no=No
+nighttime_lights=Nachtelijke lichten
+no=Nee
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=None
+none=Geen
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -158,18 +158,18 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=Organisation unit
+organisation_unit=Organisatie\u00ebenheid
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
-organisation_units=Organisation units
+organisation_units=Organisatie\u00ebenheden
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Periode
-period_type=Period type
+period=Period
+period_type=Soort periode
 phone_number=Phone number
 placement=Placement
 please_create_map_first=Please create a map first
@@ -178,30 +178,30 @@ please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
-precipitation=Precipitation
-predefined=Predefined
+precipitation=Neerslag
+predefined=Voorgedefinieerd
 previous=Previous
-program=Program
+program=Programma
 program_indicators=Program indicators
-public_access=Public access
+public_access=Publieke toegang
 quarterly=Quarterly
-relative=Relative
+relative=Relatief
 relocate=Relocate
 relocate_facility=Relocate facility
 remove=Remove
 rename=Rename
-reporting_rates=Reporting rates
+reporting_rates=Rapporteringsgraden
 revision=Revision
 search=Search
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=Selecteer
-select_groups=Select groups
+select=Select
+select_groups=Selecteer groepen
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
-select_levels=Select levels
+select_levels=Selecteur niveaus
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
@@ -218,23 +218,23 @@ sharing_settings=Sharing settings
 show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
-show_lon_lat=Show longitude/latitude
+show_lon_lat=Toon lengtegraad/breedtegraad
 sixmonthly=Six-monthly
-sixmonthly_april=Six-monthly April
+sixmonthly_april=Zesmaandelijks april
 stage=Stage
-start_date=Start date
+start_date=Startdatum
 start_end_dates=Start/end dates
 start_end_value=Start/end value
-stddev=Standard deviation
+stddev=Standaarddeviatie
 steps=Steps
-style=Style
+style=Stijl
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Sum
+sum=Som
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
 table=Table
-temperature=Temperature
+temperature=Temperatuur
 text_filter=Text filter
 thematic_layer=Thematic layer
 thematic_layer_1_legend=Thematic layer 1 legend
@@ -242,35 +242,35 @@ thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=This bi-month
-this_financial_year=This financial year
-this_month=This month
-this_quarter=This quarter
+this_financial_year=Dit financieel jaar
+this_month=Deze maand
+this_quarter=Dit kwartier
 this_sixmonth=This six-month
-this_week=This week
+this_week=Deze week
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
-totals=Totals
+today=Vandaag
+totals=Totalen
 update=Bijwerken
-username=Username
+username=Gebruikersnaam
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
-value=Value
+value=Waarde
 value_type=Value type
-variance=Variance
+variance=Variantie
 version=Version
-weekly=Weekly
+weekly=Wekelijks
 weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
+weekly_thursday=Wekelijks (Start op donderdag)
+weekly_saturday=Wekelijks (Start op zaterdag)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
-yes=Yes
+yearly=Jaarlijks
+yes=Ja
 yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
