--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -1,113 +1,113 @@
-about=Sobre
+about=Acerca
 add_legend=Adicionar legenda
-add_new=Adicionar Novo
+add_new=Add new
 address=Endere\u00e7o
 add_to_dashboard=Adicionar ao painel de instrumentos
 aggregation_type=Tipo de agregac\u00e3o
 allow_external_access=Permitir acesso externo
-and_or_lower_than=E/ou inferior a
+and_or_lower_than=And/or lower than
 attribution=Atribui\u00e7\u00e3o
 automatic=Autom\u00e1tico
-average=M\u00e9dia
+average=Average
 bimonthly=Bimensal
-boundary_layer=Camada limite
+boundary_layer=Boundary layer
 by_data_element=Por elemento de dado
-cancel=Cancelar
-can_edit_and_view=Pode visualizar e editar
-can_view=Pode visualizar
-chart=Gr\u00e1fico
+cancel=Cancel
+can_edit_and_view=Consegue Editar e Visualizar
+can_view=Can view
+chart=Chart
 classes_method=Classes / m\u00e9todo
 clear=Limpar
 clear_map=Limpar mapa
 clustering=Clustering
-code=C\u00f3digo
+code=Code
 color_scale=Escala da cor
 coordinate_field=Campo de coordenadas
 coordinates=Coordenadas
 coordinates_could_not_be_loaded=N\u00e3o foi poss\u00edvel carregar as coordenadas
-count=Contagem
-create=Criar
-created_by=Criado por
-current_legends=Legendas actuais
-daily=Diariamente
-data=Dados
-data_and_periods=Dados e per\u00edodos
-dataelement=Elemento de dado
-dataelement_group=Grupo de elementos de dados
-dataset=Ficha
-delete=Apagar
-delete_favorite=Eliminar favorito
+count=Count
+create=Create
+created_by=Created by
+current_legends=Current legends
+daily=Di\u00e1rio
+data=Data
+data_and_periods=Data and periods
+dataelement=Data element
+dataelement_group=Grupo de Elemento de Dados
+dataset=Data set
+delete=Delete
+delete_favorite=Delete favorite
 details=Detalhes
 download=Descarregar
-download_map_as_png=Descarregar mapa como PNG
-drill_down_one_level=Perfurar um nivel
+download_map_as_png=Download map as PNG
+drill_down_one_level=Drill down one level
 drill_up_one_level=Perfurar um nivel
 duplicate=Duplicar
 earthengine_layer=Selecionar camada pelo Google Earth Engine
 earth_engine_layer_legend=Legenda da camada tem\u00e1tica
-elevation=Eleva\u00e7\u00e3o
-edit_layer=Editar camadas
-edit_legend=Modificar legenda
-email=E-mail
-end_date=Data fim
+elevation=Elevation
+edit_layer=Edit layer
+edit_legend=Edit legend
+email=Email
+end_date=Data Final
 end_value_should_be_bigger_than_start_value=O valor final deve ser maior que o valor inicial
 equal_counts=Contagem equivalente
-equal_intervals=Intervalos iguais
+equal_intervals=Equal intervals
 event_data_item=Item de dados do evento
 event_data_items=Itens de dados do evento
-event_layer=Camada de eventos
-event_location=Localiza\u00e7\u00e3o do evento 
+event_layer=Event layer
+event_location=Event location
 event_time=Hora do evento
 external_layer=Camada externa
 external_layer_legend=Legenda da camada externa
-facility_layer=Camada de US
+facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Exporta\u00e7\u00e3o de Camada de US n\u00e3o \u00e9 actualmente suportada
-facility_layer_legend=Legenda da camada de US
+facility_layer_legend=Facility layer legend
 favorite_name=Nome do favorito
 favorite_outdated_create_new=Favorito est\u00e1 expirado - Por favor crie um novo
 favorites=Favoritos
 filter=Filtro
-filter_by_value=Filtrar por valor
+filter_by_value=Filter by value
 financial_april=Ano Financeiro - Abril
 financial_july=Ano Financeiro - Julho
-financial_oct=Ano Financeiro - Outubro
+financial_oct=Financial year (Start October)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Ir para gr\u00e1ficos
-go_to_pivot_tables=Ir para tabelas din\u00e2micas
-greater_than=Melhor que
-group=Grupo
+go_to_pivot_tables=Go to pivot tables
+greater_than=Greater than
+group=Group
 group_nearby_events=Group nearby events
-groups=Grupos
+groups=Groups
 groupset=Conjunto do grupo
-has_no_orgunits=n\u00e3o tem unidades organizacional
-high_color_size=Cor superior / tamanho
-highlight_color=Realce as cores
-high_size=Tamanho elevado
-home=In\u00edcio
-indicator=Indicador
-indicator_group=Grupo do indicador
+has_no_orgunits=has no organisation units
+high_color_size=High color / size
+highlight_color=Highlight color
+high_size=High size
+home=Home
+indicator=Indicator
+indicator_group=Grupo de Indicador
 information=Informa\u00e7\u00e3o
-infrastructural_data=Dados de infra-estrutura
+infrastructural_data=Infrastructural data
 invalid_parameter=Par\u00e2metro inv\u00e1lido
 item_type=Tipo de item
 landcover=Cobertura da terra
-last_2_sixmonths=Dois \u00faltimos seis-meses
+last_2_sixmonths=Last 2 six-months
 last_3_months=\u00daltimos tr\u00eas meses
-last_4_quarters=\u00daltimos quatro trimestres
+last_4_quarters=Last 4 quarters
 last_4_weeks=\u00daltimas quatro semanas
-last_5_financial_years=\u00daltimos cinco anos fiscais
+last_5_financial_years=Last 5 financial years
 last_6_bimonths=\u00daltimos seis bi-meses
 last_6_months=\u00daltimos seis meses
 last_12_months=\u00daltimos doze meses
 last_12_weeks=\u00daltimas doze semanas
-last_52_weeks=\u00daltimas 52 semanas
-last_bimonth=\u00daltimo bimestre
-last_financial_year=\u00daltimo ano fiscal
-last_month=\u00daltimo m\u00eas
-last_quarter=\u00daltimo trimestre
-last_sixmonth=\u00daltimo semestre
-last_week=\u00daltima semana
+last_52_weeks=Last 52 weeks
+last_bimonth=Last bi-month
+last_financial_year=Last financial year
+last_month=Last month
+last_quarter=Last quarter
+last_sixmonth=Last six-month
+last_week=Last week
 last_5_years=\u00daltimos cinco anos
 last_year=\u00daltimo ano
 latitude=Latitude
@@ -116,162 +116,162 @@ layers=Camadas
 layer_stack_transparency=Camadas / transpar\u00eancia
 legend_name=Nome da legenda
 legend_name_is_required=O nome da legenda \u00e9 obrigat\u00f3rio
-legends=Legendas
+legends=Legends
 legendset=Conjunto da legenda
 legend_sets_available=Conjuntos de legendas dispon\u00edveis
 legend_set_name=Nome da legenda
 legendsets=Conjunto de legendas
 legend_symbolizer=S\u00edmbolo da legenda
-legend_type=Tipo de legenda
+legend_type=Legend type
 level=N\u00edvel
 longitude=Longitude
-low_color_size=Cor Inferior / tamanho
-low_size=Tamanho reduzido
-manage_favorites=Gerir favoritos
-map=Mapa
-max=M\u00e1ximo
-min=M\u00ednimo
-min_max_c=Min/max \u00c2\u00b0C
-min_max_elevation=Min/max eleva\u00e7\u00e3o
+low_color_size=Low color / size
+low_size=Low size
+manage_favorites=Manage favorites
+map=Map
+max=M\u00e1x
+min=Min
+min_max_c=Min/max \u00b0C
+min_max_elevation=Min/max elevation
 min_max_people=Min/max pessoas
 min_max_rainfall=Min/max pluviosidade
 min_max_value=Min/max valor
-monthly=Mensalmente
-name=Nome
-next=Pr\u00f3ximo
+monthly=Mensal
+name=Name
+next=Next
 nighttime_lights=Luzes noturnas
-no=n\u00e3o
+no=N\u00e3o
 no_groupset_selected=Nenhum conjunto de grupos seleccionado
 no_map_to_save=Nenhum mapa a gravar
 none=Nenhum
 no_event_coordinates_found=N\u00e3o foram encontradas coordenadas de eventos
 no_organisation_unit_levels=Nenhum n\u00edvel de unidade organizacional
-no_organisation_units_specified=Nenhuma unidade organizacional especificada
-no_period_selected=Nenhum per\u00edodo seleccionado
+no_organisation_units_specified=No organisation units specified
+no_period_selected=No period selected
 no_program_stage_selected=Nenhum estagio do programa selecionado
 no_selected_items=Nenhum item selecionado
 no_system_info_found=Nenhuma informa\u00e7\u00e3o de sistema encontrada
-no_valid_coordinates_found=Nenhum corrdenada v\u00e1lida encontrada
-open_last_chart=Abrir ultimo gr\u00e1fico
-open_last_table=Abrir ultima tabela
+no_valid_coordinates_found=No valid coordinates found
+open_last_chart=Open last chart
+open_last_table=Open last table
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Abrir este mapa como gr\u00e1fico
+open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Abrir este mapa como tabela
-options=Op\u00e7\u00f5es
+options=Options
 organisation_unit=Unidade organizacional
 organisation_unit_group_icons=\u00cdcones do grupo da unidade organizacional
-organisationunit_groupset=Conjunto de grupos de unidades organizacionais
+organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
 organisation_units=Unidades organizacionais
 organisationunit_search=Busca de unidade organizacional
-osm_light=Open street map lite
+osm_light=OSM Light
 overwrite=Escrever por cima
-overwrite_favorite=Substituir favorito
-page=Pagina
-parent_unit=Unidade parental
-period=Periodo
+overwrite_favorite=Overwrite favorite
+page=Page
+parent_unit=Parent unit
+period=Period
 period_type=Tipo de periodo
 phone_number=N\u00famero de telefone
-placement=Coloca\u00e7\u00e3o
-please_create_map_first=Por favor crie um mapa primeiro
+placement=Placement
+please_create_map_first=Please create a map first
 please_enter_a_name=Por favor insira um nome
-please_enter_map_title=Digite um t\u00edtulo do mapa
+please_enter_map_title=Please enter a map title
 point_color=Point color
-point_radius=Raio do ponto
+point_radius=Point radius
 population_density=Densidade populacional
 precipitation=Precipita\u00e7\u00e3o
 predefined=Predefinido
 previous=Anterior
 program=Programa
-program_indicators=Indicador do programa
+program_indicators=Program indicators
 public_access=Acesso p\u00fablico
-quarterly=Trimestral
+quarterly=Quarterly
 relative=Relativo
-relocate=Realocar
+relocate=Relocate
 relocate_facility=Recolocar a instala\u00e7\u00e3o
-remove=Apagar
-rename=Renomear
+remove=Remove
+rename=Rename
 reporting_rates=Taxas de relat\u00f3rios
-revision=Revis\u00e3o
-search=Pesquisar
-search_for_favorites=Pesquisar por favoritos
-search_for_user_groups=Pesquisar por grupos de utilizador
-select=Seleccionar
+revision=Revision
+search=Search
+search_for_favorites=Search for favorites
+search_for_user_groups=Search for user groups
+select=Select
 select_groups=Selecionar grupos
-selection_mode=Modo de sele\u00e7\u00e3o
+selection_mode=Selection mode
 select_dataset=Selecionar conjunto de dados
 select_layer=Selecionar camada
-select_layer_from_google_earth_engine=Selecionar camada pelo Google Earth Engine
+select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Selecionar N\u00edvel
-select_organisation_unit_groups=Seleccione grupos de unidades organizacionais
-select_organisation_unit_levels=Seleccione n\u00edveis de unidade organizacionais
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Seleccione unidades organizacionais
-select_period=Selecionar per\u00edodo
-select_program=Selecionar o programa
+select_period=Select period
+select_program=Select program
 select_service=Selecionar servi\u00e7o
-select_stage=Selecionar estagio
+select_stage=Select stage
 select_sub_units=Selecionar sub-units
-select_year=Selecionar ano
+select_year=Select year
 service_url=Servi\u00e7o de URL
-share=Partilha
+share=Share
 share_with_other_people=Compartilhar com os outros
-sharing_settings=Configura\u00e7\u00f5es de partilha
+sharing_settings=Sharing settings
 show=Mostrar
 show_circular_area=Mostrar \u00e1rea circular com raio (m)
-show_information_sheet=Mostrar folha de informa\u00e7\u00e3o
+show_information_sheet=Show information
 show_lon_lat=Mostrar longitude/latitude
-sixmonthly=Semestral
+sixmonthly=Six-monthly
 sixmonthly_april=Semestral a partir de Abril
-stage=Estagio
-start_date=Data inicio
-start_end_dates=Inicio/datas de t\u00e9rmino
-start_end_value=Valor in\u00edcio / fim
+stage=Stage
+start_date=Data In\u00edcio
+start_end_dates=Start/end dates
+start_end_value=Start/end value
 stddev=Desvio padr\u00e3o
-steps=Passos
+steps=Steps
 style=Estilo
-sub_units=Um N\u00edvel abaixo
+sub_units=Sub-units
 sub_x2_units=Dois n\u00edveis abaixo
 sum=Soma
-swap_lon_lat=Trocar longitude/latitude
-symbol_layer=Camada da US
-table=Tabela
+swap_lon_lat=Swap longitude/latitude
+symbol_layer=Facility layer
+table=Table
 temperature=Temperatura
-text_filter=Filtro do texto
-thematic_layer=Camada tem\u00e1tica
-thematic_layer_1_legend=Legenda da camada tem\u00e1tica #1
+text_filter=Text filter
+thematic_layer=Thematic layer
+thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Legenda da camada tem\u00e1tica #2
-thematic_layer_3_legend=Legenda da camada tem\u00e1tica #3
-thematic_layer_4_legend=Legenda da camada tem\u00e1tica #4
+thematic_layer_3_legend=Thematic layer 3 legend
+thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=Este bi-m\u00eas
 this_financial_year=Ano financeiro
 this_month=Este m\u00eas
 this_quarter=Este Trimestre
-this_sixmonth=Estes seis meses
+this_sixmonth=This six-month
 this_week=Esta semana
-this_year=Este ano
+this_year=This year
 time_since_last_data_update=Tempo decorrido desde a ultima atualiza\u00e7\u00e3o de dados
 today=Hoje
 totals=Totais
-update=Actualizar
-username=Utilizador
-user_is_not_assigned_to_any_organisation_units=O utilizador n\u00e3o est\u00e1 atribu\u00eddo a nenhuma unidade organizacional
+update=Atualizar
+username=Nome de usu\u00e1rio
+user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=Unidade organizacional do utilizador
-user_ou=Utilizador ou
-user_sub_units=Dois n\u00edveis abaixo
-user_sub_x2_units=Dois n\u00edveis abaixo
+user_ou=User OU
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
 value=Valor
-value_type=Tipo de valor
+value_type=Value type
 variance=Vari\u00e2ncia
-version=Vers\u00e3o
+version=Version
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Escrever interpreta\u00e7\u00e3o
+write_interpretation=Write interpretation
 write_your_interpretation=Escreva a sua interpreta\u00e7\u00e3o
-yearly=Anual
-yes=Sim
-yesterday=Ont\u00e9m
-you_can_not_select_organisation_units_below_the_selected_level=N\u00e3o \u00e9 poss\u00edvel selecionar unidades organizacionais abaixo do n\u00edvel selecionado
+yearly=Anualmente
+yes=sim
+yesterday=Yesterday
+you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=Voc\u00ea n\u00e3o tem acesso a todos os itens neste favorito
 
