--- a/i18n/i18n_app_uk.properties
+++ b/i18n/i18n_app_uk.properties
@@ -1,6 +1,6 @@
 about=\u041f\u0440\u043e
 add_legend=Add legend
-add_new=\u0414\u043e\u0434\u0430\u0442\u0438 \u043d\u043e\u0432\u0435
+add_new=Add new
 address=\u0410\u0434\u0440\u0435\u0441\u0430
 add_to_dashboard=Add to dashboard
 aggregation_type=\u0422\u0438\u043f \u0430\u0433\u0440\u0435\u0433\u0430\u0446\u0456\u0457
@@ -8,35 +8,35 @@ allow_external_access=\u0414\u043e\u0437\u0432\u043e\u043b\u0438\u0442\u0438 \u0
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=\u0421\u0435\u0440\u0435\u0434\u043d\u0454
+average=\u0421\u0435\u0440\u0435\u0434\u043d\u0454 \u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f
 bimonthly=\u0429\u043e\u0434\u0432\u0430 \u043c\u0456\u0441\u044f\u0446\u0456
 boundary_layer=Boundary layer
 by_data_element=\u0417\u0430 \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u043e\u043c \u0434\u0430\u043d\u0438\u0445
-cancel=\u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438
-can_edit_and_view=\u041c\u043e\u0436\u0435 \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0456 \u043f\u0435\u0440\u0435\u0433\u043b\u044f\u0434\u0430\u0442\u0438
-can_view=\u041c\u043e\u0436\u0435 \u043f\u0435\u0440\u0435\u0433\u043b\u044f\u0434\u0430\u0442\u0438
-chart=\u0414\u0456\u0430\u0433\u0440\u0430\u043c\u0430
+cancel=Cancel
+can_edit_and_view=\u041c\u043e\u0436\u0435 \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0439 \u043f\u0435\u0440\u0435\u0433\u043b\u044f\u0434\u0430\u0442\u0438
+can_view=Can view
+chart=Chart
 classes_method=Classes / method
 clear=\u041e\u0447\u0438\u0441\u0442\u0438\u0442\u0438
 clear_map=Clear map
 clustering=Clustering
-code=\u041a\u043e\u0434
+code=Code
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=\u041f\u0456\u0434\u0440\u0430\u0445\u0443\u043d\u043e\u043a
-create=\u0421\u0442\u0432\u043e\u0440\u0438\u0442\u0438
-created_by=\u0421\u0442\u0432\u043e\u0440\u0435\u043d\u043e
+count=Count
+create=Create
+created_by=Created by
 current_legends=Current legends
 daily=\u0429\u043e\u0434\u043d\u044f
-data=\u0414\u0430\u043d\u0456
+data=Data
 data_and_periods=Data and periods
-dataelement=\u0415\u043b\u0435\u043c\u0435\u043d\u0442 \u0434\u0430\u043d\u0438\u0445
+dataelement=Data element
 dataelement_group=\u0413\u0440\u0443\u043f\u0430 \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u0456\u0432 \u0434\u0430\u043d\u0438\u0445
-dataset=\u041d\u0430\u0431\u0456\u0440 \u0434\u0430\u043d\u0438\u0445
-delete=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
-delete_favorite=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438 \u0432\u0438\u0431\u0440\u0430\u043d\u0435
+dataset=Data set
+delete=Delete
+delete_favorite=Delete favorite
 details=\u0414\u0435\u0442\u0430\u043b\u0456
 download=\u0417\u0430\u0432\u0430\u043d\u0442\u0430\u0436\u0438\u0442\u0438
 download_map_as_png=Download map as PNG
@@ -48,7 +48,7 @@ earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
-email=\u0415\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430 \u043f\u043e\u0448\u0442\u0430
+email=Email
 end_date=\u041a\u0456\u043d\u0446\u0435\u0432\u0430 \u0434\u0430\u0442\u0430
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
@@ -70,13 +70,13 @@ filter=\u0424\u0456\u043b\u044c\u0442\u0440
 filter_by_value=Filter by value
 financial_april=\u0424\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a (\u041f\u043e\u0447\u0430\u0442\u043e\u043a \u0443 \u043a\u0432\u0456\u0442\u043d\u0456)
 financial_july=\u0424\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a (\u041f\u043e\u0447\u0430\u0442\u043e\u043a \u0443 \u043b\u0438\u043f\u043d\u0456)
-financial_oct=\u0424\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a (\u041f\u043e\u0447\u0430\u0442\u043e\u043a \u0443 \u0436\u043e\u0432\u0442\u043d\u0456)
+financial_oct=Financial year (Start October)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=\u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u0434\u043e \u0434\u0456\u0430\u0433\u0440\u0430\u043c
 go_to_pivot_tables=Go to pivot tables
-greater_than=\u0411\u0456\u043b\u044c\u0448\u0435, \u043d\u0456\u0436
-group=\u0413\u0440\u0443\u043f\u0430
+greater_than=Greater than
+group=Group
 group_nearby_events=Group nearby events
 groups=Groups
 groupset=Group set
@@ -84,31 +84,31 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=\u0413\u043e\u043b\u043e\u0432\u043d\u0430
-indicator=\u041f\u043e\u043a\u0430\u0437\u043d\u0438\u043a
-indicator_group=\u0413\u0440\u0443\u043f\u0430 \u043f\u043e\u043a\u0430\u0437\u043d\u0438\u043a\u0456\u0432
+home=Home
+indicator=Indicator
+indicator_group=\u0413\u0440\u0443\u043f\u0430 \u0456\u043d\u0434\u0438\u043a\u0430\u0442\u043e\u0440\u0456\u0432
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 2 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f
-last_3_months=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 3 \u043c\u0456\u0441\u044f\u0446\u0456
-last_4_quarters=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 4 \u043a\u0432\u0430\u0440\u0442\u0430\u043b\u0438
-last_4_weeks=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 4 \u0442\u0438\u0436\u043d\u0456
-last_5_financial_years=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 5 \u0444\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0445 \u0440\u043e\u043a\u0456\u0432
-last_6_bimonths=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 6 \u0434\u0432\u043e\u043c\u0456\u0441\u044f\u0447\u043d\u0438\u0445 \u043f\u0435\u0440\u0456\u043e\u0434\u0438
+last_2_sixmonths=Last 2 six-months
+last_3_months=\u041c\u0438\u043d\u0443\u043b\u0456 3 \u043c\u0456\u0441\u044f\u0446\u0456
+last_4_quarters=Last 4 quarters
+last_4_weeks=\u041c\u0438\u043d\u0443\u043b\u0456 4 \u0442\u0438\u0436\u043d\u0456
+last_5_financial_years=Last 5 financial years
+last_6_bimonths=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 6 \u0434\u0432\u043e\u043c\u0456\u0441\u044f\u0447\u043d\u0438\u0445 \u043f\u0435\u0440\u0456\u043e\u0434\u0456\u0432
 last_6_months=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 6 \u043c\u0456\u0441\u044f\u0446\u0456\u0432
-last_12_months=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 12 \u043c\u0456\u0441\u044f\u0446\u0456\u0432
-last_12_weeks=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 12 \u0442\u0438\u0436\u043d\u0456\u0432
-last_52_weeks=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 52 \u0442\u0438\u0436\u043d\u0456
-last_bimonth=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 \u0434\u0432\u0430 \u043c\u0456\u0441\u044f\u0446\u0456
-last_financial_year=\u041c\u0438\u043d\u0443\u043b\u0438\u0439 \u0444\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a
-last_month=\u041e\u0441\u0442\u0430\u043d\u043d\u0456\u0439 \u043c\u0456\u0441\u044f\u0446\u044c
-last_quarter=\u041c\u0438\u043d\u0443\u043b\u0438\u0439 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
-last_sixmonth=\u041e\u0441\u0442\u0430\u043d\u043d\u0454 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f
-last_week=\u041c\u0438\u043d\u0443\u043b\u0438\u0439 \u0442\u0438\u0436\u0434\u0435\u043d\u044c
-last_5_years=\u041e\u0441\u0442\u0430\u043d\u043d\u0456 5 \u0440\u043e\u043a\u0456\u0432
+last_12_months=\u041c\u0438\u043d\u0443\u043b\u0456 12 \u043c\u0456\u0441\u044f\u0446\u0456\u0432
+last_12_weeks=\u041c\u0438\u043d\u0443\u043b\u0456 12 \u0442\u0438\u0436\u043d\u0456\u0432
+last_52_weeks=Last 52 weeks
+last_bimonth=Last bi-month
+last_financial_year=Last financial year
+last_month=Last month
+last_quarter=Last quarter
+last_sixmonth=Last six-month
+last_week=Last week
+last_5_years=\u041c\u0438\u043d\u0443\u043b\u0456 5 \u0440\u043e\u043a\u0456\u0432
 last_year=\u041c\u0438\u043d\u0443\u043b\u0438\u0439 \u0440\u0456\u043a
 latitude=\u0428\u0438\u0440\u043e\u0442\u0430
 layer=Layer
@@ -122,28 +122,28 @@ legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Legend type
-level=Level
-longitude=\u0414\u043e\u0432\u0433\u043e\u0442\u0430
+legend_type=\u0422\u0438\u043f \u0443\u043c\u043e\u0432\u043d\u0438\u0445 \u043f\u043e\u0437\u043d\u0430\u0447\u0435\u043d\u044c
+level=\u0420\u0456\u0432\u0435\u043d\u044c
+longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=\u041a\u0435\u0440\u0443\u0432\u0430\u0442\u0438 \u0432\u0438\u0431\u0440\u0430\u043d\u0438\u043c
-map=\u041c\u0430\u043f\u0430
+manage_favorites=Manage favorites
+map=Map
 max=\u041c\u0430\u043a\u0441
-min=\u041c\u0456\u043d
-min_max_c=Min/max \u00c2\u00b0C
+min=Min
+min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=\u0429\u043e\u043c\u0456\u0441\u044f\u0447\u043d\u043e
-name=\u0406\u043c'\u044f
-next=\u041d\u0430\u0441\u0442\u0443\u043f\u043d\u0435
+name=Name
+next=Next
 nighttime_lights=Nighttime lights
 no=\u041d\u0456
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=\u0416\u043e\u0434\u043d\u043e\u0433\u043e
+none=\u041d\u0435\u043c\u0430\u0454
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=\u041e\u043f\u0446\u0456\u0457
+options=Options
 organisation_unit=\u041e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u0438\u0439 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=\u041d\u0430\u0431\u0456\u0440 \u0433\u0440\u0443\u043f \u043e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u0438\u0445 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432
@@ -165,10 +165,10 @@ organisation_units=\u041e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u0438
-overwrite_favorite=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u0438 \u0432\u0438\u0431\u0440\u0430\u043d\u0435
-page=\u0421\u0442\u043e\u0440\u0456\u043d\u043a\u0430
+overwrite_favorite=Overwrite favorite
+page=Page
 parent_unit=Parent unit
-period=\u041f\u0435\u0440\u0456\u043e\u0434
+period=Period
 period_type=Period type
 phone_number=\u041d\u043e\u043c\u0435\u0440 \u0442\u0435\u043b\u0435\u0444\u043e\u043d\u0443
 placement=Placement
@@ -180,46 +180,46 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=\u041f\u043e\u043f\u0435\u0440\u0435\u0434\u043d\u0454
-program=Program
-program_indicators=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043d\u0456 \u043f\u043e\u043a\u0430\u0437\u043d\u0438\u043a\u0438
+previous=\u041f\u043e\u043f\u0435\u0440\u0435\u0434\u043d\u044f
+program=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u0430
+program_indicators=Program indicators
 public_access=\u0417\u0430\u0433\u0430\u043b\u044c\u043d\u0438\u0439 \u0434\u043e\u0441\u0442\u0443\u043f
-quarterly=\u0429\u043e\u043a\u0432\u0430\u0440\u0442\u0430\u043b\u044c\u043d\u043e
+quarterly=Quarterly
 relative=\u0420\u043e\u0434\u0438\u0447
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u041f\u0440\u0438\u0431\u0440\u0430\u0442\u0438
-rename=\u041f\u0435\u0440\u0435\u0439\u043c\u0435\u043d\u0443\u0432\u0430\u0442\u0438
+remove=Remove
+rename=Rename
 reporting_rates=\u0427\u0430\u0441\u0442\u043e\u0442\u0430 \u043f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u044c
-revision=\u041f\u0435\u0440\u0435\u0433\u043b\u044f\u0434
-search=\u041f\u043e\u0448\u0443\u043a
+revision=Revision
+search=Search
 search_for_favorites=\u0428\u0443\u043a\u0430\u0442\u0438 \u0432\u0438\u0431\u0440\u0430\u043d\u0435
-search_for_user_groups=\u041f\u043e\u0448\u0443\u043a \u0433\u0440\u0443\u043f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
-select=\u041e\u0431\u0440\u0430\u0442\u0438
+search_for_user_groups=Search for user groups
+select=Select
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
-select_organisation_unit_groups=\u041e\u0431\u0440\u0430\u0442\u0438 \u0433\u0440\u0443\u043f\u0438 \u043e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u0438\u0445 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432
-select_organisation_unit_levels=\u041e\u0431\u0440\u0430\u0442\u0438 \u0440\u0456\u0432\u043d\u0456 \u043e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u043e\u0433\u043e \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0443
+select_organisation_unit_groups=Select organisation unit groups
+select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=\u041e\u0431\u0440\u0430\u0442\u0438 \u043e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u0456 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0438
-select_period=\u041e\u0431\u0440\u0430\u0442\u0438 \u043f\u0435\u0440\u0456\u043e\u0434
-select_program=\u041e\u0431\u0440\u0430\u0442\u0438 \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u0443
+select_period=Select period
+select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=\u041e\u0431\u0440\u0430\u0442\u0438 \u043e\u0434\u0438\u043d\u0438\u0446\u0456 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432
 select_year=Select year
 service_url=Service URL
-share=\u041f\u043e\u0434\u0456\u043b\u0438\u0442\u0438\u0441\u044f
+share=Share
 share_with_other_people=Share with others
-sharing_settings=\u041d\u0430\u043b\u0430\u0448\u0442\u0443\u0432\u0430\u043d\u043d\u044f \u0441\u043f\u0456\u043b\u044c\u043d\u043e\u0433\u043e \u0434\u043e\u0441\u0442\u0443\u043f\u0443
+sharing_settings=Sharing settings
 show=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u0438
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=\u0420\u0430\u0437 \u043d\u0430 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f
+sixmonthly=Six-monthly
 sixmonthly_april=\u0420\u0430\u0437 \u043d\u0430 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f \u043a\u0432\u0456\u0442\u0435\u043d\u044c
 stage=Stage
 start_date=\u041f\u043e\u0447\u0430\u0442\u043a\u043e\u0432\u0430 \u0434\u0430\u0442\u0430
@@ -233,7 +233,7 @@ sub_x2_units=Sub-x2-units
 sum=\u0421\u0443\u043c\u0430
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
-table=\u0422\u0430\u0431\u043b\u0438\u0446\u044f
+table=Table
 temperature=Temperature
 text_filter=Text filter
 thematic_layer=Thematic layer
@@ -245,33 +245,33 @@ this_bimonth=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0434\u0432\u043e
 this_financial_year=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0444\u0456\u043d\u0430\u043d\u0441\u043e\u0432\u0438\u0439 \u0440\u0456\u043a
 this_month=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u043c\u0456\u0441\u044f\u0446\u044c
 this_quarter=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
-this_sixmonth=\u041f\u043e\u0442\u043e\u0447\u043d\u0435 \u043f\u0456\u0432\u0440\u0456\u0447\u0447\u044f
+this_sixmonth=This six-month
 this_week=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0442\u0438\u0436\u0434\u0435\u043d\u044c
-this_year=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u0440\u0456\u043a
+this_year=This year
 time_since_last_data_update=Elapsed time since last data update
 today=\u0421\u044c\u043e\u0433\u043e\u0434\u043d\u0456
 totals=\u041f\u0456\u0434\u0441\u0443\u043c\u043a\u0438
 update=\u041e\u043d\u043e\u0432\u0438\u0442\u0438
 username=\u0406\u043c'\u044f \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
-user_organisation_unit=User organisation unit
+user_organisation_unit=\u041e\u0440\u0433\u0430\u043d\u0456\u0437\u0430\u0446\u0456\u0439\u043d\u0438\u0439 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
 user_ou=User OU
-user_sub_units=\u041e\u0434\u0438\u043d\u0438\u0446\u0456 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
-user_sub_x2_units=\u041f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0438 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432 \u0434\u0440\u0443\u0433\u043e\u0433\u043e \u0440\u0456\u0432\u043d\u044f
+user_sub_units=User sub-units
+user_sub_x2_units=User sub-x2-units
 value=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u044f
-value_type=\u0422\u0438\u043f \u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f
+value_type=Value type
 variance=\u041a\u043e\u043b\u0438\u0432\u0430\u043d\u043d\u044f (\u0432\u0430\u0440\u0456\u0430\u0442\u0438\u0432\u043d\u0456\u0441\u0442\u044c)
-version=\u0412\u0435\u0440\u0441\u0456\u044f
+version=Version
 weekly=\u0429\u043e\u0442\u0438\u0436\u043d\u044f
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=\u041d\u0430\u043f\u0438\u0441\u0430\u0442\u0438 \u0456\u043d\u0442\u0435\u0440\u043f\u0440\u0435\u0442\u0430\u0446\u0456\u044e
+write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=\u0429\u043e\u0440\u0456\u0447\u043d\u043e
 yes=\u0422\u0430\u043a
-yesterday=\u0412\u0447\u043e\u0440\u0430
+yesterday=Yesterday
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=\u0423 \u0432\u0430\u0441 \u043d\u0435\u043c\u0430\u0454 \u0434\u043e\u0441\u0442\u0443\u043f\u0443 \u0434\u043e \u0432\u0441\u0456\u0445 \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u0456\u0432 \u0443 \u0446\u044c\u043e\u043c\u0443 \u0432\u0438\u0431\u0440\u0430\u043d\u043e\u043c\u0443
 
